crates/jolt_java_fmt/tests/snapshots/corpus__style__program__comment_only_file.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
// file header
/* retained */

diagnostics:
(none)
