crates/jolt_java_fmt/tests/snapshots/corpus__style__program__comments_on_removed_semicolons.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class A {
} // trailing comment on the last brace

class B {
}
// salvaged from a removed semicolon

diagnostics:
(none)
