crates/jolt_java_fmt/tests/snapshots/corpus__style__program__empty_file.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:


diagnostics:
(none)
