crates/jolt_java_fmt/tests/snapshots/corpus__style__program__formatter_ignore_leading_comment_before_trailing_marker.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreLeadingCommentBeforeTrailingMarker {
  // JOLT-TRIVIA:member-leading
  int value = 1; // @formatter:off
  // @formatter:on
}

// JOLT-TRIVIA:top-level-leading
class TopLevelIgnored {
} // @formatter:off
// @formatter:on

diagnostics:
(none)
