crates/jolt_java_fmt/tests/snapshots/corpus__style__program__formatter_ignore_top_level.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package demo;

// @formatter:off
class Raw {int x=1+2;}
// @formatter:on

diagnostics:
(none)
