crates/jolt_java_fmt/tests/snapshots/corpus__style__program__formatter_ignore_top_level_next_item.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
// @formatter:off
class Raw {int x=1+2;}
// @formatter:on
class After {
  int y = 3;
}

diagnostics:
(none)
