crates/jolt_java_fmt/tests/snapshots/corpus__style__program__formatter_ignore_trailing_markers.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FormatterIgnoreTrailingMarkers {
  void before() {
    int value = 0;
  } // @formatter:off

  void  inside(){ int value= 0; } // @formatter:on
}

diagnostics:
(none)
