crates/jolt_java_fmt/tests/snapshots/corpus__style__program__formatter_ignore_transparent_semicolon.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
// @formatter:off
class   A{}
// @formatter:on
// @formatter:off
class   B{}
// @formatter:on
class C {
}

diagnostics:
(none)
