crates/jolt_java_fmt/tests/snapshots/corpus__style__program__name_segment_line_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package a //x
;

import b.c.D //y
;
import e.F //z
;

class NameSegmentLineComments {
  void method(
    final @Deprecated // annotation stays put
    String value
  ) {
  }
}

diagnostics:
(none)
