crates/jolt_java_fmt/tests/snapshots/corpus__style__program__package_import_spacing.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@Beta
@Generated("tool")
package com.example.demo;

import a.Alpha;
import z.Zed;

class A {
}

diagnostics:
(none)
