crates/jolt_java_fmt/tests/snapshots/corpus__style__program__qualified_name_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com // root
  .example
  .app;

import z /* dot */.Z;

class Names {
}

diagnostics:
(none)
