crates/jolt_java_fmt/tests/snapshots/corpus__style__program__qualified_names.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.app;

import a.A;
import z.Z;

import static z.Z.tools.*;

class Names {
}

diagnostics:
(none)
